# wgpu-rs

./: .gitignore  Cargo.toml  build.rs  frag.spv  rustfmt.toml  vert.spv
res/assets/: mushrooms.glb
res/models/: box.glb  grass-2.glb  pine-1.glb  pine-2.glb  pine-3.glb  pine.glb  rock-1.glb  sphere.glb
src/: anti_aliasing.rs  assets.rs  camera.rs  camera_controller.rs  default_render_pipeline.rs  deferred.rs  game_state.rs  input.rs  logger.rs  main.rs  model.rs  noise.rs  plane.rs  settings.rs  state.rs  texture.rs
src/camera/: bounding_box.rs  camera.rs  controller.rs  frustum.rs  instance.rs  mod.rs  uniforms.rs
src/deferred/: data.rs  mod.rs  sampler.rs  textures.rs  uniforms.rs  water.rs
src/fxaa/: data.rs  mod.rs
src/model/: material.rs  mesh.rs  mod.rs  primitive.rs
src/models/: bundle.rs  data.rs  instances.rs  material.rs  mesh.rs  mod.rs  model.rs  primitive.rs  render_pipeline.rs
src/pipeline/: drawable.rs  render.rs  texture.rs  uniform.rs
src/pipelines/: mod.rs  render_targets.rs
src/shaders/: assets-shadows.frag  assets-shadows.vert  assets.frag  assets.vert  biome-decoration.comp  biome-moisture.comp  biome-temperature.comp  default.frag  default.vert  deferred.frag  fxaa.frag  fxaa.vert  model-shadows.frag  model-shadows.vert  model.frag  model.vert  noise.comp  sky.frag  sky.vert  terrain-elev.comp  terrain-erosion.comp  terrain-norm.comp  terrain-smooth.comp  terrain.comp  terrain.frag  terrain.vert  water.frag  water.vert
src/states/: empty.rs  loading.rs  mod.rs  running.rs
src/ui/: config.rs  mod.rs
src/water/: mod.rs  (+1 more)
(+82 files in other folders)
