[package]
name = "wgpu-rs"
version = "0.1.0"
authors = ["larsjarlvik <lars.jarlvik@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.23.0"
wgpu = "0.6.2"
env_logger = "0.8.2"
futures = "0.3.8"
image = "0.23.12"
anyhow = "1.0"
cgmath = "0.17.0"
rand = "0.7.3"
wgpu-mipmap = "0.1"
rayon = "1.1"
nanoid = "0.1.3"
noise = "0.7.0"
bytemuck = { version = "1.4", features = [ "derive" ] }

[dependencies.gltf]
version = "0.15.0"
features = ["names"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"