[package]
name = "wgpu-rs"
version = "0.1.0"
authors = ["larsjarlvik <lars.jarlvik@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.24.0"
wgpu = "0.7.0"
env_logger = "0.8.2"
futures = "0.3.8"
image = "0.23.12"
cgmath = "0.18.0"
rand = "0.8.3"
wgpu-mipmap = { git = "https://github.com/jshrake/wgpu-mipmap.git", branch = "main" }
rayon = "1.1"
strum = "0.20"
strum_macros = "0.20"
bytemuck = { version = "1.5.1", features = [ "derive" ] }
once_cell = "1.7.2"
smaa = "0.2.2"

[dependencies.gltf]
version = "0.15.0"
features = ["names"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"
rayon = "1.1"